BUG#9535 Warning for "create table t as select uuid();"  - Set max_length of Item_func_uuid to max_length*system_charset_info->mbmaxlen   Note! Item_func_uuid should be set to use 'ascii' charset when hex(), format(), md5() etc will use 'ascii'

mysql-test/r/func_misc.result:
  Test results
mysql-test/t/func_misc.test:
  Test case
sql/item_strfunc.h:
  Multiply max_length of Item_func_uuid with system_charset_info->mbmaxlen